change to stories images to stop cropping

--- a/app/webpacker/styles/stories.scss
+++ b/app/webpacker/styles/stories.scss
@@ -3,6 +3,9 @@
     display: table;
     width: 100%;
     margin-bottom: 40px;
+    max-width: 1250px;
+    margin-left: auto;
+    margin-right: auto;
 
     &__image {
         display: table-cell;
@@ -75,8 +78,8 @@
     }
 
     .story-header {
-            display: -ms-flexbox;
-            display: flexbox;
+        display: -ms-flexbox;
+        display: flexbox;
         display: flex;
         align-items: center;
         width: 100%;
@@ -87,8 +90,8 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            width: 208px;
-            height: 135px;
+            width: 200px;
+            height: 200px;
         }
 
         &__label {
@@ -174,7 +177,7 @@
             &__img
             {
                 width: 100%;
-                height: 186px;
+                height: 230px;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
